# cncf-example-k8s

./: .gitignore  Makefile  README.md  argocd-app.yaml  pyproject.toml
backstage/: Dockerfile  app-config.production.yaml  tsconfig.json
tofu/: argocd.tf  backstage.tf  base.tf  harbor.tf  monitoring.tf  opentelemetry.tf
